# python_praticas

./: README.md  data_test.py  pyproject.toml
